--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   flutter_login: ^5.0.0
   local_auth: ^2.3.0
   flutter_secure_storage: ^9.2.2
-
+  qr_flutter: ^4.1.0
+  http: ^1.3.0
+  dash_chat_2: ^0.0.21
+  barcode_widget: ^2.0.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
