--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
 
     <application
-        android:label="myproject"
+        android:label="RMUTP AI Library"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
