--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: myproject
-description: "A new Flutter project."
+description: "RMUTP Library AI Chat"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -39,14 +39,24 @@ dependencies:
   flutter_login: ^5.0.0
   local_auth: ^2.3.0
   flutter_secure_storage: ^9.2.2
+  flutter_secure_storage_windows: ^3.0.0
   qr_flutter: ^4.1.0
   http: ^1.3.0
   dash_chat_2: ^0.0.21
   barcode_widget: ^2.0.4
-  
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.3"
+    
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/logo_foreground.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
